<resources>
    <string name="app_name">FlightPath</string>

    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="ok_label">OK</string>
    <string name="call_label">Call</string>
    <string name="input_code_label">Type code</string>
    <string name="cancel_label">Cancel</string>
    <string name="done_label">Done</string>
    <string name="logout_title">Application logout</string>
    <string name="end_trip_label">End trip</string>
    <string name="logout_ont_trip_message">Please close the current trip before logging out.</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="end_trip_message">Are you sure you want to end trip?</string>
    <string name="no_location_error">Cannot get your location. Please enable GPS.</string>
    <string name="close_app_title">Close application</string>
    <string name="close_app_msg">Are you sure you want to exit?</string>
    <string name="update_app_label">Update App</string>
    <string name="status_label">Status</string>
    <string name="add_inspection_label">Add Inspection</string>
    <string name="add_disposal_inspection_label">Disposal Inspection</string>
    <string name="get_jobs_label">Get Jobs</string>
    <string name="job_info_label">Job Info</string>
    <string name="logout_label">Log out</string>
    <string name="exit_label">Exit</string>
    <string name="close_period_label">Close Period</string>
    <string name="returning_vehicle_label">Returning Vehicle</string>
    <string name="sync_label">Synchronize</string>
    <string name="clean_db_label">Clear database[dev panel]</string>
    <string name="send_now_label">Synchronize now</string>
    <string name="device_status_label">"Status: "</string>
    <string name="store_db_label">Store database[dev panel]</string>

    <string name="job_description_label">Job Description</string>
    <string name="customer_hint">Customer</string>
    <string name="number_hint">Number</string>
    <string name="address_hint">Address</string>
    <string name="job_phone_hint">Telephone</string>
    <string name="job_contact_hint">Contact</string>
    <string name="job_time_hint">Job time</string>
    <string name="car_description_label">Car Description</string>
    <string name="model_name_hint">Model</string>
    <string name="registration_hint">Registration</string>
    <string name="manufacturer_hint">Manufacturer</string>
    <string name="notes_label">Notes</string>
    <string name="reference_hint">Reference Number</string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="home_name_number_hint">Home Name/Number</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="postcode_hint">Postcode</string>


    <string name="period_end_date_hint">Period End Date:</string>
    <string name="period_end_mileage_hint">Period End Mileage:</string>
    <string name="period_agent_email_hint">Agent email address:</string>
    <string name="period_end_date_hint2">date</string>
    <string name="period_end_mileage_hint2">end mileage</string>
    <string name="period_agent_email_hint2">email address</string>
    <string name="period_start_date">"Start date: "</string>
    <string name="period_start_mileage">"Start mileage: "</string>
    <string name="period_closed_message">Thank you for closing your last month. The log has gone to your line manager for authorisation and the deduction will be calculated and reported back to you prior to being submitted to payroll.</string>
    <string name="field_required_error">Field can\'t be empty.</string>
    <string name="prepare_trip_no_jobs_text">Currently there is no jobs for you. Please tap below button to get newest job list from server.</string>
    <string name="end_mileage_label">End Trip Mileage</string>
    <string name="remove_image_text">Are you sure you want to remove photo?</string>
    <string name="job_list_label">Job List</string>
    <string name="select_job_label">Select Job</string>
    <string name="unselect_job_label">Unselect Job</string>
    
    <!--returning vehicle checklist-->
    <string name="vehicle_condition_title">Vehicle Condition</string>
    <string name="vehicle_condition_description">The vehicle has been cleaned / valeted inside and out for the day of collection and ensure that the parcel shelf and accessories that the vehicle was supplied with is returned in full working order.</string>
    <string name="service_man_info_title">Service &amp; Manufacturer Information</string>
    <string name="service_man_info_description">The Book Pack and Service Book returned in the vehicle(updated as per the manufacturers scheduled guidelines)</string>
    <string name="valid_mot_cert_title">Valid MOT Certificate</string>
    <string name="valid_mot_cert_description">The MOT Certificate is available – (if applicable)</string>
    <string name="keys_title">Keys</string>
    <string name="keys_description">A full set of keys, including the master key, spares and locking wheel-nut keys, should be returned in working order if originally supplied.</string>
    <string name="fuel_level_title">Fuel Level</string>
    <string name="fuel_level_description">Return vehicle with 1/4 tank of fuel</string>
    <string name="door_mirrors_title">Door Mirrors</string>
    <string name="door_mirrors_description">Door Mirrors – Missing, cracked or damaged mirrors are not acceptable. If adjustable and /or heated door mirrors, they must be in working order when returned</string>
    <string name="window_title">Windows / Windscreens</string>
    <string name="window_description">Windows / windscreens – light scratching is acceptable provided it does not interfere with the driver’s line of sight and any heating elements still work properly. Chips, cracks and holes are not acceptable. Repaired chips within the driver’s line of sight are not acceptable. Repaired chips outside the driver’s line of sight are acceptable provided they are repaired to a professional standard.</string>
    <string name="lamps_title">Lamps &amp; Lenses</string>
    <string name="lamps_description">All lamps must work. Minor scuffs marks and scratches up to 25mm are acceptable. Holes or cracks in the glass or plastic covers of lamp are not acceptable.</string>
    <string name="tyres_title">Tyres &amp; Wheels</string>
    <string name="tyres_description">All tyres, including any spare, must meet minimum UK legal requirements (in excess of 1.6mm tread across the entire width of the wheel) and comply with the vehicle manufacturer’s recommendations of tyre type, class*, size and speed rating for the vehicle. There must be no damage to sidewalls or tread. Evidence of uneven wear due to under or over inflation is not acceptable. Punctured or illegal tyres are not acceptable and will result in an aborted collection</string>
    <string name="overall_condition_title">Overall condition of the vehicle</string>
    <string name="overall_condition_description">Vehicle has no warning lights displayed. There is no unreported accident damage on the vehicle which will result in excess damage charges.</string>
    <string name="damage_free_title">Damage Free</string>
    <string name="damage_free_description">Any third party induced damage should be reported. Any own fault damage (including damage whilst parked), must be reported to Peter Dinallo immediately</string>
</resources>
