<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:scrollbars="none"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:divider="@drawable/list_view_divider_drawable"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:showDividers="middle"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/periodStartDate"
                style="@style/Base.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/period_start_date"
                />

            <TextView
                android:id="@+id/periodStartMileage"
                style="@style/Base.SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/period_start_mileage"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                style="@style/Base.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/periodEndDate"
                    style="@style/Base.Input.ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/period_end_date_hint"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Base.Input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/periodEndMileage"
                    style="@style/Base.Input.ET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:hint="@string/period_end_mileage_hint"
                    />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Base.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/agentEmailAddress"
                style="@style/Base.Input.ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/period_agent_email_hint"
                />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/confirmCheckBox"
            style="@style/Base.CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            />

        <Button
            android:id="@+id/closePeriodBtn"
            style="@style/Base.BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close_period_label"
            />
    </LinearLayout>
</ScrollView>